@@ -4,97 +4,90 @@ import me.colingrimes.midnight.command.Command;
 import me.colingrimes.midnight.command.handler.util.ArgumentList;
 import me.colingrimes.midnight.command.handler.util.CommandProperties;
 import me.colingrimes.midnight.command.handler.util.Sender;
+import me.colingrimes.midnight.geometry.Size;
 import me.colingrimes.midnight.message.Placeholders;
 import me.colingrimes.midnight.util.bukkit.Inventories;
 import me.colingrimes.midnight.util.bukkit.Players;
 import me.colingrimes.skymines.SkyMines;
 import me.colingrimes.skymines.config.Messages;
-import me.colingrimes.skymines.skymine.structure.MineSize;
-import org.bukkit.Material;
+import me.colingrimes.skymines.config.Mines;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 public class SkyMineAdminGive implements Command<SkyMines> {
-
-	private static final Set<Material> validBlocks = Arrays.stream(Material.values())
-			.filter(Material::isBlock)
-			.filter(Material::isSolid)
-			.filter(m -> !m.hasGravity())
-			.filter(m -> !m.isAir())
-			.collect(Collectors.toSet());
 
 	@Override
 	public void execute(@Nonnull SkyMines plugin, @Nonnull Sender sender, @Nonnull ArgumentList args) {
 		Optional<Player> receiver = args.getPlayer(0);
 		if (receiver.isEmpty()) {
-			Messages.FAILURE_NO_PLAYER_FOUND.replace("{player}", args.get(0)).send(sender);
+			Messages.ADMIN_FAILURE_MISC_NO_PLAYER_FOUND.replace("{player}", args.getFirst()).send(sender);
 			return;
 		}
 
-		MineSize size = new MineSize(10, 10, 10);
+		Mines.Mine mine = Mines.MINES.get().get("default");
 		if (args.size() >= 2) {
-			String sizeString = args.get(1);
-			String[] sizeStringArray = sizeString.split("x");
-			if (!isSizeValid(sizeStringArray)) {
-				Messages.USAGE_SKYMINES_GIVE.send(sender);
+			mine = Mines.MINES.get().get(args.get(1));
+		}
+
+		if (mine == null) {
+			Messages.FAILURE_SKYMINE_INVALID_IDENTIFIER.replace("{id}", args.getOrDefault(1, "default")).send(sender);
+			return;
+		}
+
+		Size size = null;
+		if (args.size() >= 3) {
+			size = Size.of(args.get(2));
+			if (size == null) {
+				Messages.ADMIN_USAGE_SKYMINE_GIVE.send(sender);
 				return;
 			}
-
-			int length = Integer.parseInt(sizeStringArray[0]);
-			int height = Integer.parseInt(sizeStringArray[1]);
-			int width = Integer.parseInt(sizeStringArray[2]);
-			if (length <= 1 || height <= 1 || width <= 1) {
-				Messages.FAILURE_TOO_SMALL.send(sender);
-				return;
-			} else if (length > 100 || height > 100 || width > 100) {
-				Messages.FAILURE_TOO_BIG.send(sender);
+			if (size.getLength() < 1 || size.getHeight() < 1 || size.getWidth() < 1) {
+				Messages.ADMIN_FAILURE_GIVE_TOO_SMALL.send(sender);
 				return;
 			}
+			if (size.getLength() > 100 || size.getHeight() > 100 || size.getWidth() > 100) {
+				Messages.ADMIN_FAILURE_GIVE_TOO_BIG.send(sender);
+				return;
+			}
+		}
 
-			size = new MineSize(length, height, width);
+		// Set the default mine size if none is specified.
+		if (size == null) {
+			size = mine.getDefaultSize();
 		}
 
 		int amount = 1;
-		if (args.size() >= 3) {
-			if (args.getInt(2).isEmpty()) {
-				Messages.FAILURE_INVALID_AMOUNT.replace("{amount}", args.get(2)).send(sender);
+		if (args.size() >= 4) {
+			if (args.getInt(3).isEmpty()) {
+				Messages.ADMIN_FAILURE_GIVE_INVALID_AMOUNT.replace("{amount}", args.get(2)).send(sender);
 				return;
 			}
-			amount = args.getInt(2).get();
+			amount = args.getInt(3).get();
 		}
 
-		Material borderType = args.size() >= 4 ? Material.matchMaterial(args.get(3)) : Material.BEDROCK;
-		if (borderType == null || !validBlocks.contains(borderType)) {
-			Messages.FAILURE_INVALID_MATERIAL.replace("{material}", args.get(3)).send(sender);
-			return;
-		}
+		// Gives the specified amount of tokens to the player.
+		ItemStack token = plugin.getSkyMineManager().getToken().getToken(mine.getIdentifier(), size);
+		token.setAmount(amount);
+		Inventories.give(receiver.get(), token, true);
 
-		// gets the specified amount of tokens and gives it to the player
-		ItemStack item = plugin.getSkyMineManager().getToken().getToken(size, borderType);
-		item.setAmount(amount);
-		Inventories.give(receiver.get(), item, true);
-
-		// gets the name of the item
-		ItemMeta meta = item.getItemMeta();
+		// Sets the name of the token.
+		ItemMeta meta = token.getItemMeta();
 		String name = "Name not loaded.";
 		if (meta != null) {
 			name = meta.getDisplayName();
 		}
 
-		// messages
-		Placeholders placeholders = Placeholders.of("{token}", name).add("{amount}", item.getAmount());
+		// Send messages.
+		Placeholders placeholders = Placeholders.of("{token}", name).add("{amount}", token.getAmount());
 		Messages.SUCCESS_RECEIVE.replace(placeholders).send(receiver.get());
 		if (!sender.isPlayer() || !sender.player().equals(receiver.get())) {
-			Messages.SUCCESS_GIVE.replace(placeholders).replace("{player}", receiver.get().getName()).send(sender);
+			Messages.ADMIN_SUCCESS_GIVE.replace(placeholders).replace("{player}", receiver.get().getName()).send(sender);
 		}
 	}
 
@@ -102,9 +95,9 @@ public class SkyMineAdminGive implements Command<SkyMines> {
 	@Override
 	public List<String> tabComplete(@Nonnull SkyMines plugin, @Nonnull Sender sender, @Nonnull ArgumentList args) {
 		if (args.size() == 1) {
-			return Players.filter(p -> p.getName().startsWith(args.get(0))).map(Player::getName).toList();
-		} else if (args.size() == 4) {
-			return validBlocks.stream().map(m -> m.name().toLowerCase()).filter(name -> name.startsWith(args.getLowercase(3))).toList();
+			return Players.filter(p -> p.getName().startsWith(args.getFirst())).map(Player::getName).toList();
+		} else if (args.size() == 2) {
+			return Mines.MINES.get().keySet().stream().map(String::toLowerCase).filter(token -> token.contains(args.getLowercase(1))).toList();
 		} else {
 			return null;
 		}
@@ -112,19 +105,8 @@ public class SkyMineAdminGive implements Command<SkyMines> {
 
 	@Override
 	public void configureProperties(@Nonnull CommandProperties properties) {
-		properties.setUsage(Messages.USAGE_SKYMINES_GIVE);
+		properties.setUsage(Messages.ADMIN_USAGE_SKYMINE_GIVE);
 		properties.setPermission("skymines.admin.give");
 		properties.setArgumentsRequired(1);
-	}
-
-	private boolean isSizeValid(String[] sizeStringArray) {
-		if (sizeStringArray.length != 3) {
-			return false;
-		}
-		return isInt(sizeStringArray[0]) && isInt(sizeStringArray[1]) && isInt(sizeStringArray[2]);
-	}
-
-	private boolean isInt(String string) {
-		return string.matches("\\d+");
 	}
 }
